--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "mca-node-project1",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A project for Mississippi Coding Academy",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AaronBPaden/mca-node-project1.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Aaron Paden",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AaronBPaden/mca-node-project1/issues"
